samples/_failures_safe/1761336607_0cfa59_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d19bd182.c: In function ‘main’:
./samples/SAFE/__tmp_d19bd182.c:160:5: error: expected expression at end of input
  160 |     if (len >
      |     ^~
./samples/SAFE/__tmp_d19bd182.c:160:5: error: expected declaration or statement at end of input
